misc: fix artist names are not showing on mobile

--- a/src/components/Section/Section.scoped.scss
+++ b/src/components/Section/Section.scoped.scss
@@ -7,7 +7,7 @@
   background: $color-black-3;
 
   @media (max-width: 768px) {
-    height: 200px;
+    height: 220px;
   }
 }
 
